--- a/composer.json
+++ b/composer.json
@@ -22,21 +22,17 @@
         }
     },
     "description": "More info available on: http://pear.php.net/package/Net_Socket",
-    "include-path": [
-        "./"
-    ],
     "license": "BSD-2-Clause",
-    "name": "pear/net_socket",
+    "name": "dimarick/net_socket",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Net_Socket",
         "source": "https://github.com/pear/Net_Socket"
     },
     "type": "library",
     "require": {
-        "php": ">=5.4.0",
-        "pear/pear_exception": "@stable"
+        "php": ">=5.6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4"
+        "phpunit/phpunit": "*"
     }
 }
