--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "./"
     ],
     "license": "BSD-2-Clause",
-    "name": "pear/net_socket",
+    "name": "dimarick/net_socket",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Net_Socket",
         "source": "https://github.com/pear/Net_Socket"
